# SimpleATM

./: CMakeLists.txt  README.md  atm.cpp  atm.h  bank.h  test_atm.cpp
